--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -29,6 +29,8 @@
   --su-9: 4rem; // 64px
   --su-10: 8rem; // 128px
 
+  --su-n-1: -0.25rem; // 4px
+
   ////////////////////////////////////////////////////////////////////////////////////
   // Border radius ///////////////////////////////////////////////////////////////////
   ////////////////////////////////////////////////////////////////////////////////////
