--- a/app/views/articles/_comment_tree.html.erb
+++ b/app/views/articles/_comment_tree.html.erb
@@ -1,2 +1,2 @@
 <% comment, sub_comments = comment_node %>
-<%= nested_comments(tree: { comment => sub_comments }, commentable: @article, is_view_root: true) %>
+<%= nested_comments(tree: { comment => sub_comments }, commentable: @article, is_view_root: true, is_page_article: is_page_article) %>
