--- a/app/views/articles/_reaction_button.html.erb
+++ b/app/views/articles/_reaction_button.html.erb
@@ -13,5 +13,5 @@
     <%= crayons_icon_tag(image_active_path, aria_hidden: true) %>
   </span>
   <% end %>
-  <span class="crayons-reaction__count" id="reaction-number-<%= category %>"><span class="bg-base-40 opacity-25 p-2 inline-block radius-default"></span></span>
+  <span class="crayons-reaction__count" id="reaction-number-<%= category %>" itemprop="upvoteCount"><span class="bg-base-40 opacity-25 p-2 inline-block radius-default"></span></span>
 </button>
