--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -29,7 +29,8 @@
                commentable: commentable,
                is_view_root: is_view_root,
                is_childless: is_childless,
-               subtree_html: subtree_html) %>
+               subtree_html: subtree_html,
+               is_page_article: is_page_article) %>
   </div>
   <% if comment.depth < 3 %>
     </details>
