--- a/app/views/comments/_comment_header.html.erb
+++ b/app/views/comments/_comment_header.html.erb
@@ -1,6 +1,6 @@
 <div class="comment__header">
-  <a href="<%= URL.user(comment.user) %>" class="crayons-link crayons-link--secondary flex items-center fw-medium m:hidden">
-    <span class="js-comment-username"><%= comment.user.name %></span>
+  <a href="<%= URL.user(comment.user) %>" class="crayons-link crayons-link--secondary flex items-center fw-medium m:hidden"<% if is_page_article == true && comment.root? %> itemprop="author" itemscope itemtype="https://schema.org/Person"<% end %>>
+    <span class="js-comment-username"<% if is_page_article == true && comment.root? %> itemprop="name"<% end %>><%= comment.user.name %></span>
     <% if commentable_author_is_op?(commentable, comment) %>
       <span class="crayons-hover-tooltip inline-block spec-op-author -mr-2" data-tooltip="<%= get_ama_or_op_banner(commentable) %>">
         <%= crayons_icon_tag("small-medal", title: get_ama_or_op_banner(commentable)) %>
@@ -19,7 +19,7 @@
     <% end %>
   </div>
 
-  <%= render "comments/comment_date", decorated_comment: decorated_comment %>
+  <%= render "comments/comment_date", comment: comment, decorated_comment: decorated_comment, is_page_article: is_page_article %>
 
   <div class="comment__dropdown">
     <button id="comment-dropdown-trigger-<%= comment.id %>" aria-controls="comment-dropdown-<%= comment.id %>" aria-expanded="false"
@@ -29,7 +29,10 @@
     </button>
     <div id="comment-dropdown-<%= comment.id %>" class="crayons-dropdown right-1 s:right-0 s:left-auto fs-base dropdown">
       <ul class="m-0">
-        <li><a href="<%= URL.comment(comment) %>" class="crayons-link crayons-link--block permalink-copybtn" aria-label="<%= t("views.comments.menu.copy.aria_label", user: comment.user.name) %>" data-no-instant><%= t("views.comments.menu.copy.text") %></a></li>
+        <li><a href="<%= URL.comment(comment) %>" class="crayons-link crayons-link--block permalink-copybtn"
+               <% if comment.score < 0 || strip_tags(comment.processed_html).length <= 400 %> rel="noindex, nofollow"
+               <% end %> aria-label="<%= t("views.comments.menu.copy.aria_label", user: comment.user.name) %>" data-no-instant><%= t("views.comments.menu.copy.text") %></a>
+        </li>
         <li class="comment-actions hidden" data-user-id="<%= comment.user_id %>" data-action="settings-button" data-path="<%= URL.comment(comment) %>/settings" aria-label="<%= t("views.comments.menu.settings.aria_label", user: comment.user.name) %>"></li>
         <% action = comment.hidden_by_commentable_user ? "unhide" : "hide" %>
         <li class="comment-actions hidden" data-action="hide-button" data-commentable-user-id="<%= commentable&.user_id %>" data-user-id="<%= comment.user_id %>">
