--- a/app/views/pages/_editor_guide_text.html.erb
+++ b/app/views/pages/_editor_guide_text.html.erb
@@ -36,10 +36,10 @@
         </a>
       </h2>
       <ul>
-        <li>Use <a href="#markdown"><strong>markdown</strong></a> to write and format <a href="<%= root_path %>"><%= community_name %></a> posts.</li>
-        <li>Most of the time, you can write inline HTML directly into your posts.</li>
+        <li>Use <a href="#markdown"><strong>markdown</strong></a> to write and format <a href="<%= root_path %>"><%= community_name %></a> questions.</li>
+        <li>Most of the time, you can write inline HTML directly into your questions.</li>
         <li>You can use <strong><a href="#liquidtags">Liquid tags</a></strong> to make add rich content such as tweets and videos.</li>
-        <li>Links to unpublished posts are shareable for feedback/review.</li>
+        <li>Links to unpublished questions are shareable for feedback/review.</li>
         <li>The best size for your <b>cover image</b> is 1000 X 420.</li>
       </ul>
     <% end %>
@@ -71,7 +71,7 @@
 
     <%= render partial: "editor_guide_h3", locals: { id: "markdown-inline-images", title: "Inline Images" } %>
     <p>
-      When adding GIFs to posts and comments, please note that there is a limit of 200 megapixels per frame/page.
+      When adding GIFs to questions and answers, please note that there is a limit of 200 megapixels per frame/page.
       <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--OsLaFSo9--/c_fill,f_auto,fl_progressive,h_220,q_auto,w_220/https://thepracticaldev.s3.amazonaws.com/uploads/user/profile_image/31047/af153cd6-9994-4a68-83f4-8ddf3e13f0bf.jpg" alt="example image, with sloan" loading="lazy" />
     </p>
     <pre>![Image description](put-link-to-image-here)</pre>
@@ -81,31 +81,31 @@
     </figure>
 
     <%= render partial: "editor_guide_h3", locals: { id: "markdown-headers", title: "Headings" } %>
-    <p>Add a heading to your post with this syntax:</p>
+    <p>Add a heading to your question with this syntax:</p>
     <pre># One '#' for a h1 heading<br>## Two '#'s for a h2 heading<br>...<br>###### Six '#'s for a h6 heading</pre>
 
     <%= render partial: "editor_guide_h3", locals: { id: "author-notes", title: "Author Notes/Comments" } %>
-    <p>Add some hidden notes/comments to your article with this syntax:</p>
+    <p>Add some hidden notes/comments to your question with this syntax:</p>
     <pre>&lt;!-- This won't show up in the content! --&gt;</pre>
 
     <h2 style="font-size:2.8em" id="accessibility" class="permalink-heading">
       <strong>Accessibility</strong>
       <a href="#accessibility" aria-label="permalink for Accessibility"><%= crayons_icon_tag("small-link", aria_hidden: true) %></a>
     </h2>
-    <p>People access online content in all kinds of different ways, and there are a few things you can do to make your posts more easily understood by a broad range of users. You can find out more about web accessibility at <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">W3C's Introduction to Web Accessibility</a>, but there are two main ways you can make your posts more accessible: providing alternative descriptions of any images you use, and adding appropriate headings.</p>
+    <p>People access online content in all kinds of different ways, and there are a few things you can do to make your questions more easily understood by a broad range of users. You can find out more about web accessibility at <a href="https://www.w3.org/WAI/fundamentals/accessibility-intro/">W3C's Introduction to Web Accessibility</a>, but there are two main ways you can make your questions more accessible: providing alternative descriptions of any images you use, and adding appropriate headings.</p>
 
     <%= render partial: "editor_guide_h3", locals: { id: "alt-text-for-images", title: "Providing alternative descriptions for images" } %>
-    <p>Some users might not be able to see or easily process images that you use in your posts. Providing an alternative description for an image helps make sure that everyone can understand your post, whether they can see the image or not.</p>
-    <p>When you upload an image in the editor, you will see the following text to copy and paste into your post:</p>
+    <p>Some users might not be able to see or easily process images that you use in your questions. Providing an alternative description for an image helps make sure that everyone can understand your question, whether they can see the image or not.</p>
+    <p>When you upload an image in the editor, you will see the following text to copy and paste into your question:</p>
     <pre>![Image description](/file-path/my-image.png)</pre>
     <p>Replace the "Image description" in square brackets with a description of your image - for example:</p>
     <pre>![A pie chart showing 40% responded "Yes", 50% responded "No" and 10% responded "Not sure"](/file-path/my-image.png)</pre>
-    <p>By doing this, if someone reads your post using an assistive device like a screen reader (which turns written content into spoken audio) they will hear the description you entered.</p>
+    <p>By doing this, if someone reads your question using an assistive device like a screen reader (which turns written content into spoken audio) they will hear the description you entered.</p>
 
     <%= render partial: "editor_guide_h3", locals: { id: "accessible-headings", title: "Providing headings" } %>
-    <p>Headings provide an outline of your post to readers, including people who can't see the screen well. Many assistive technologies (like screen readers) allow users to skip directly to a particular heading, helping them find and understand the content of your post with ease.</p>
-    <p><a href="#markdown-headers">Headings can be added in levels 1 - 6</a>. Avoid using a level one heading (i.e., '# Heading text'). When you create a post, your post title automatically becomes a level one heading and serves a special role on the page, much like the headline of a newspaper article. Similar to how a newspaper article only has one headline, it can be confusing if multiple level one headings exist on a page.</p>
-    <p>In your post content, start with level two headings for each section (e.g. '## Section heading text'), and increase the heading level by one when you'd like to add a sub-section, for example:</p>
+    <p>Headings provide an outline of your question to readers, including people who can't see the screen well. Many assistive technologies (like screen readers) allow users to skip directly to a particular heading, helping them find and understand the content of your question with ease.</p>
+    <p><a href="#markdown-headers">Headings can be added in levels 1 - 6</a>. Avoid using a level one heading (i.e., '# Heading text'). When you ask a question, your question title automatically becomes a level one heading and serves a special role on the page, much like the headline of a newspaper article. Similar to how a newspaper article only has one headline, it can be confusing if multiple level one headings exist on a page.</p>
+    <p>In your question content, start with level two headings for each section (e.g. '## Section heading text'), and increase the heading level by one when you'd like to add a sub-section, for example:</p>
     <pre>## Fun facts about sloths</br></br>### Speed</br></br>Sloths move at a maximum speed of 0.27 km/h!</pre>
 
     <h2 style="font-size:2.8em" id="liquidtags" class="permalink-heading">
@@ -118,12 +118,12 @@
       but have created our own custom tags listed below:
     </p>
 
-    <%= render partial: "editor_guide_h3", locals: { id: "article-post-embed", title: "#{community_name} Article/Post Embed" } %>
-    <p>All you need is the full link of the article:</p>
+    <%= render partial: "editor_guide_h3", locals: { id: "article-post-embed", title: "#{community_name} Question Embed" } %>
+    <p>All you need is the full link of the question:</p>
     <pre>{% link <%= app_url("/kazz/boost-your-productivity-using-markdown-1be") %> %}</pre>
     <p>You can also use the slug like this:</p>
     <pre>{% link kazz/boost-your-productivity-using-markdown-1be %}</pre>
-    <p>You can also use the alias post instead of link like this:</p>
+    <p>You can also use the alias question instead of link like this:</p>
     <pre>{% post <%= app_url("/kazz/boost-your-productivity-using-markdown-1be") %> %}</pre>
     <p>or this:</p>
     <pre>{% post kazz/boost-your-productivity-using-markdown-1be %}</pre>
@@ -136,9 +136,9 @@
     <p>All you need is the tag name:</p>
     <pre>{% tag git %}</pre>
 
-    <%= render partial: "editor_guide_h3", locals: { id: "comment-embed", title: "#{community_name} Comment Embed" } %>
+    <%= render partial: "editor_guide_h3", locals: { id: "comment-embed", title: "#{community_name} Answer Embed" } %>
     <p>All you need is the
-      <code>ID</code> at the end of a comment URL. To get the comment link, click either the timestamp or the menu button in the top right corner on a comment and then click "Permalink". Here's an example:
+      <code>ID</code> at the end of a answer URL. To get the answer link, click either the timestamp or the menu button in the top right corner on a answer and then click "Permalink". Here's an example:
     </p>
     <pre>{% comment 2d1a %}</pre>
 
@@ -502,6 +502,6 @@
       </a>
     </p>
 
-    <p>Happy posting! 📝</p>
+    <p>Happy asking! 📝</p>
   </article>
 </main>
