--- a/app/views/pages/_terms_text.html.erb
+++ b/app/views/pages/_terms_text.html.erb
@@ -116,11 +116,11 @@
     </h3>
 
     <p>
-      The following policy applies to comments, articles, and all other works shared on the <%= community_name %> platform:
+      The following policy applies to answers, questions, and all other works shared on the <%= community_name %> platform:
       <ul><li>Users must make a good-faith effort to share content that is on-topic, of high-quality, and is not designed primarily for the purposes of promotion or creating backlinks.
         </li>
-        <li>Posts must contain substantial content — they may not merely reference an external link that contains the full post.</li>
-        <li>If a post contains affiliate links, that fact must be clearly disclosed.  For instance, with language such as: “This post includes affiliate links; I may receive compensation if you purchase products or services from the different links provided in this article.”</li></ul>
+        <li>Questions must contain substantial content — they may not merely reference an external link that contains the full question.</li>
+        <li>If a question contains affiliate links, that fact must be clearly disclosed.  For instance, with language such as: “This question includes affiliate links; I may receive compensation if you purchase products or services from the different links provided in this question.”</li></ul>
     </p>
 
     <p>
