--- a/app/views/users/_comments_section.html.erb
+++ b/app/views/users/_comments_section.html.erb
@@ -26,7 +26,7 @@
     <% end %>
     <% @comments.each do |comment| %>
       <% if comment.commentable.present? && comment.commentable.published && !comment.deleted %>
-        <a href="<%= comment.path %>" class="profile-comment-row ">
+        <a href="<%= comment.path %>" class="profile-comment-row "<% if comment.score < 0 || strip_tags(comment.processed_html).length <= 400 %> rel="noindex, nofollow"<% end %>>
           <h4 class="fw-bold fs-base m-0 mb-1">
             <%= comment.commentable.title %>
           </h4>
