--- a/app/views/layouts/_sidebar_tags.html.erb
+++ b/app/views/layouts/_sidebar_tags.html.erb
@@ -9,6 +9,7 @@
     <div id="sidebar-nav-followed-tags" class="overflow-y-auto -m-1 p-1 mb-2 sidebar-nav-followed-tags" style="max-height: 42vh;"></div>
   <% else %>
     <% if 0 > 1 %>
+      <!--The fake if block will be removed to turn into the original block-->
       <h3 class="crayons-subtitle-3 p-2"><%= t("views.main.tags.popular_tags") %></h3>
       <div id="sidebar-nav-default-tags" class="overflow-y-auto" style="max-height: 42vh">
         <% Tag.supported.order(hotness_score: :desc).limit(30).pluck(:id, :name).each do |tag_array| %>
