--- a/app/views/pages/robots.text.erb
+++ b/app/views/pages/robots.text.erb
@@ -1,4 +1,5 @@
 User-agent: *
+Disallow: /*/actions_panel*
 Disallow: /users/auth/twitter*
 Disallow: /users/auth/github*
 Disallow: /report-abuse?url=*
@@ -10,5 +11,8 @@ Disallow: /listings*?q=*
 Disallow: /mod/*
 Disallow: /mod?*
 Disallow: /admin/*
+Disallow: /users/password/new
+Disallow: /enter
+Disallow: /new
 
 Sitemap: <%= URL.url("sitemap-index.xml") %>
