Margin-bottom value has been added to google-audo-placed container.

--- a/app/assets/stylesheets/base/typography.scss
+++ b/app/assets/stylesheets/base/typography.scss
@@ -322,4 +322,8 @@ body {
   .twitter-tweet {
     margin: 0 0 var(--content-rhythm) 0;
   }
+
+  .google-auto-placed {
+    margin: 0 0 var(--content-rhythm) 0;
+  }
 }
