--- a/app/views/pages/robots.text.erb
+++ b/app/views/pages/robots.text.erb
@@ -10,5 +10,9 @@ Disallow: /listings*?q=*
 Disallow: /mod/*
 Disallow: /mod?*
 Disallow: /admin/*
+Disallow: /users/password/new
+Disallow: /enter
+Disallow: /new
+Disallow: /*/actions_panel*
 
 Sitemap: <%= URL.url("sitemap-index.xml") %>
