--- a/app/assets/stylesheets/views/article.scss
+++ b/app/assets/stylesheets/views/article.scss
@@ -23,7 +23,8 @@
       border-radius: var(--radius-auto);
       border-bottom-left-radius: 0;
       border-bottom-right-radius: 0;
-      object-fit: cover;
+      //object-fit: cover;
+      object-fit: contain;
       width: 100%;
       height: 100%;
     }
