Adsense will be re-pushed to trig the image builder.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
       <meta name="user-signed-in" content="<%= user_signed_in? %>">
       <meta name="head-cached-at" content="<%= Time.current.to_i %>">
       <% if Settings::General.payment_pointer.present? %>
-        <!-- Experimental web monetization payment pointer for micropayments -->
+        <!-- Experimental web monetization payment pointer for micropayment -->
         <!-- It lets readers make micropayments to websites they visit. -->
         <!-- This is step 1: Get live in production to test for platform-wide payment pointer. -->
         <!-- Step 2: Allow authors to set their payment pointer so they can directly monetize their content based on visitors. -->
