--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<% if comment && comment.user %>
+<% if comment && comment.user && !comment.deleted %>
   <% if comment.depth < 3 %>
     <details class="comment-wrapper js-comment-wrapper comment-wrapper--deep-<%= comment.depth %>
                     <%= comment_class(comment, is_view_root: is_view_root) %>
