User profiles have been marked as noindex, and /reactions? pages have been disallowed.

--- a/app/views/pages/robots.text.erb
+++ b/app/views/pages/robots.text.erb
@@ -11,5 +11,6 @@ Disallow: /listings*?q=*
 Disallow: /mod/*
 Disallow: /mod?*
 Disallow: /admin/*
+Disallow: /reactions?*
 
 Sitemap: <%= URL.url("sitemap-index.xml") %>
