--- a/app/views/pages/robots.text.erb
+++ b/app/views/pages/robots.text.erb
@@ -12,5 +12,7 @@ Disallow: /mod/*
 Disallow: /mod?*
 Disallow: /admin/*
 Disallow: /reactions?*
+Disallow: /images/*/rs:fill*
+Disallow: /uploads/user/profile_image/*
 
 Sitemap: <%= URL.url("sitemap-index.xml") %>
