Similar questions suggestion has been replaced with the default suggestion, and user sidebar has been removed from show.html

--- a/app/views/pages/robots.text.erb
+++ b/app/views/pages/robots.text.erb
@@ -12,6 +12,7 @@ Disallow: /mod/*
 Disallow: /mod?*
 Disallow: /admin/*
 Disallow: /reactions?*
+Disallow: /follows/*
 Disallow: /images/*/rs:fill*
 Disallow: /uploads/user/profile_image/*
 
