--- a/app/assets/stylesheets/base/layout.scss
+++ b/app/assets/stylesheets/base/layout.scss
@@ -188,7 +188,26 @@
     --layout-sidebar-left-row-end: initial;
     --layout-content-width: 7fr;
     --layout: var(--layout-sidebar-left-width) var(--layout-content-width)
-      var(--layout-sidebar-right-width);
+    var(--layout-sidebar-right-width);
+  }
+}
+
+.crayons-layout--question {
+  --layout-gap: 0;
+  --site-width: 900px;
+  @media (min-width: $breakpoint-m) {
+    --layout-gap: var(--su-2);
+    --layout-sidebar-left-width: var(--su-9);
+    --layout: var(--layout-sidebar-left-width) 1fr;
+    --layout-sidebar-left-row-end: span 2;
+  }
+
+  @media (min-width: $breakpoint-l) {
+    --layout-gap: var(--su-4);
+    --layout-sidebar-right-width: 3fr;
+    --layout-sidebar-left-row-end: initial;
+    --layout-content-width: 7fr;
+    --layout: var(--layout-sidebar-left-width) var(--layout-content-width);
   }
 }
 
