--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -25,7 +25,18 @@
 <% end %>
 
 <%= javascript_packs_with_chunks_tag "homePage", defer: true %>
-<% cache(release_adjusted_cache_key("main-stories-index-#{params}-#{user_signed_in?}"), expires_in: 90.seconds) do %>
+<%
+  if timeframe_check("week")
+    expires_in = 7.days
+  elsif timeframe_check("month")
+    expires_in = 30.days
+  elsif timeframe_check("year") || timeframe_check("infinity")
+    expires_in = 240.days
+  else
+    expires_in = 5.minutes
+  end
+%>
+<% cache(release_adjusted_cache_key("main-stories-index-#{params}-#{user_signed_in?}"), expires_in: expires_in) do %>
   <div class="crayons-layout crayons-layout--3-cols crayons-layout--3-cols--drop-right-left" id="index-container"
       data-params="<%= params.merge(sort_by: "hotness_score", sort_direction: "desc").to_json(only: %i[tag username q sort_by sort_direction]) %>" data-which="<%= @list_of %>"
       data-tag=""
