--- a/app/views/stories/tagged_articles/index.html.erb
+++ b/app/views/stories/tagged_articles/index.html.erb
@@ -1,9 +1,19 @@
 <%= content_for :page_meta do %>
   <%= render "stories/tagged_articles/meta" %>
 <% end %>
-<% expiry_minutes = params[:timeframe].blank? || params[:timeframe] == "latest" ? 4 : 20 %>
+<%
+  if timeframe_check("week")
+    expires_in = 7.days
+  elsif timeframe_check("month")
+    expires_in = 30.days
+  elsif timeframe_check("year") || timeframe_check("infinity")
+    expires_in = 240.days
+  else
+    expires_in = 5.minutes
+  end
+%>
 <% flag = true %>
-<% cache("tag-stories-index-#{params}-#{flag}-#{@tag.updated_at}-#{user_signed_in?}", expires_in: expiry_minutes.minutes) do %>
+<% cache("tag-stories-index-#{params}-#{flag}-#{@tag.updated_at}-#{user_signed_in?}", expires_in: expires_in) do %>
   <div class="crayons-layout">
     <header class="crayons-card branded-4 p-4 l:p-6 spec__tag-header" style="border-top-color: <%= @tag.bg_color_hex %> ">
       <div class="flex">
