--- a/app/assets/stylesheets/views/article.scss
+++ b/app/assets/stylesheets/views/article.scss
@@ -70,6 +70,10 @@
 
   &__main {
     padding: var(--content-padding-y) var(--content-padding-x);
+
+    .google-auto-placed {
+      margin: 0 0 var(--content-rhythm) 0;
+    }
   }
 
   &__body {
