--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -171,7 +171,7 @@
                        articles: @collection_articles %>
           <% end %>
 
-          <div class="mx-auto my-4" id="end-content">
+          <div class="mx-auto mb-4" id="end-content">
             <ins class="adsbygoogle"
                  style="display:block; text-align:center;"
                  data-ad-layout="in-article"
@@ -187,7 +187,7 @@
             <%= @article.processed_html.html_safe %>
           </div>
 
-          <div class="mx-auto my-4" id="end-content">
+          <div class="mx-auto mt-4" id="end-content">
             <ins class="adsbygoogle"
                  style="display:block; text-align:center;"
                  data-ad-layout="in-article"
