--- a/app/views/articles/show_v2.html.erb
+++ b/app/views/articles/show_v2.html.erb
@@ -202,7 +202,7 @@
             <%= @article.processed_html.html_safe %>
           </div>
 
-          <div class="mx-auto my-4" id="end-content">
+          <div class="mx-auto mt-4" id="end-content">
             <ins class="adsbygoogle"
                  style="display:block; text-align:center;"
                  data-ad-layout="in-article"
