--- a/app/views/articles/show_v2.html.erb
+++ b/app/views/articles/show_v2.html.erb
@@ -190,7 +190,7 @@
           </div>
         </header>
 
-        <div class="crayons-article__main<%= " pb-0" if @article.processed_html.blank? %>">
+        <div class="crayons-article__main">
           <% if @collection %>
             <%= render "articles/collection",
                        rendered_article: @article,
@@ -202,7 +202,7 @@
             <%= @article.processed_html.html_safe %>
           </div>
 
-          <div class="mx-auto mt-4" id="end-content">
+          <div class="mx-auto<%= " mt-4" unless @article.processed_html.blank? %>" id="end-content">
             <ins class="adsbygoogle"
                  style="display:block; text-align:center;"
                  data-ad-layout="in-article"
