--- a/app/assets/stylesheets/components/autocomplete.scss
+++ b/app/assets/stylesheets/components/autocomplete.scss
@@ -1,6 +1,6 @@
 @import '../config/import';
 @import './forms';
-@import '@reach/combobox/styles';
+//@import '@reach/combobox/styles';
 
 .crayons-autocomplete {
   // Override of the default hidden class to make sure it takes priority over any display style attached to the 'replaceElement' textarea
