Combobox styles have been added as an external file.

--- a/app/assets/stylesheets/components/autocomplete.scss
+++ b/app/assets/stylesheets/components/autocomplete.scss
@@ -1,5 +1,6 @@
 @import '../config/import';
 @import './forms';
+@import '../combobox';
 //@import '@reach/combobox/styles';
 
 .crayons-autocomplete {
