--- a/app/views/articles/show_v2.html.erb
+++ b/app/views/articles/show_v2.html.erb
@@ -27,6 +27,12 @@
   <% end %>
 <% end %>
 
+<% if Settings::General.ga_publisher_id %>
+  <%= content_for :html do %>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=<%= Settings::General.ga_publisher_id %>" crossorigin="anonymous"></script>
+  <% end %>
+<% end %>
+
 <% if internal_navigation? %>
   <!-- You may be seeing the canonical URL in the body for human inspection -->
   <!-- This is because of navigation via InstantClick, instantclick.io -->
