--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -6,46 +6,55 @@
 <% end %>
 
 <% if @commentable %>
-<%= content_for :page_meta do %>
-  <meta name="description" content="<%= @commentable.description || t("views.comments.meta.description") %>">
-  <%= meta_keywords_article %>
+  <% indexable = true %>
+  <%= content_for :page_meta do %>
+    <meta name="description" content="<%= @commentable.description || t("views.comments.meta.description") %>">
+    <%= meta_keywords_article %>
 
-  <meta property="og:type" content="article" />
-  <meta property="og:title" content="<%= t("views.comments.meta.og.title", title: @commentable.title) %>" />
-  <meta property="og:description" content="<%= @commentable.description || t("views.comments.meta.og.description", site: community_name) %>" />
-  <meta property="og:site_name" content="<%= community_name %>" />
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@<%= Settings::General.social_media_handles["twitter"] %>">
-  <meta name="twitter:creator" content="@<%= @user.twitter_username %>">
-  <meta name="twitter:title" content="<%= @commentable.title %>">
-  <meta name="twitter:description" content="<%= @commentable.description || t("views.comments.meta.og.description", site: community_name) %>">
+    <meta property="og:type" content="article" />
+    <meta property="og:title" content="<%= t("views.comments.meta.og.title", title: @commentable.title) %>" />
+    <meta property="og:description" content="<%= @commentable.description || t("views.comments.meta.og.description", site: community_name) %>" />
+    <meta property="og:site_name" content="<%= community_name %>" />
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@<%= Settings::General.social_media_handles["twitter"] %>">
+    <meta name="twitter:creator" content="@<%= @user.twitter_username %>">
+    <meta name="twitter:title" content="<%= @commentable.title %>">
+    <meta name="twitter:description" content="<%= @commentable.description || t("views.comments.meta.og.description", site: community_name) %>">
 
-  <% if @root_comment.present? %>
-    <link rel="canonical" href="<%= app_url(@root_comment.path) %>" />
-    <meta property="og:url" content="<%= app_url(@root_comment.path) %>" />
-    <meta property="og:title" content="<%= t("views.comments.meta.og.title_rel", root: truncate(strip_tags(@root_comment.processed_html), length: 50), site: community_name) %>" />
-    <meta name="twitter:title" content="<%= t("views.comments.meta.og.title_rel", root: truncate(strip_tags(@root_comment.processed_html), length: 50), site: community_name) %>">
-    <meta property="og:image" content="<%= comment_social_image_url(@root_comment) %>" />
-    <meta name="twitter:image" content="<%= comment_social_image_url(@root_comment) %>">
-    <% if @root_comment.score < 0 || strip_tags(@root_comment.processed_html).length <= 400 %>
-      <meta name="robots" content="noindex">
-      <meta name="robots" content="nofollow">
-    <% end %>
-  <% else %>
-    <% if @commentable.comments_count <= 30 %>
-      <meta name="robots" content="noindex">
-      <meta name="robots" content="nofollow">
-    <% end %>
-    <link rel="canonical" href="<%= app_url("#{@commentable.path}/comments") %>" />
-    <meta property="og:url" content="<%= app_url("#{@commentable.path}/comments") %>" />
-    <meta property="og:title" content="<%= t("views.comments.meta.og.title_root", title: @commentable.title, site: community_name) %>" />
-    <meta name="twitter:title" content="<%= t("views.comments.meta.og.title_root", title: @commentable.title, site: community_name) %>">
-    <% if @commentable.class.name == "Article" && @commentable.published %>
-      <meta property="og:image" content="<%= article_social_image_url(@commentable) %>" />
-      <meta name="twitter:image" content="<%= article_social_image_url(@commentable) %>">
+    <% if @root_comment.present? %>
+      <link rel="canonical" href="<%= app_url(@root_comment.path) %>" />
+      <meta property="og:url" content="<%= app_url(@root_comment.path) %>" />
+      <meta property="og:title" content="<%= t("views.comments.meta.og.title_rel", root: truncate(strip_tags(@root_comment.processed_html), length: 50), site: community_name) %>" />
+      <meta name="twitter:title" content="<%= t("views.comments.meta.og.title_rel", root: truncate(strip_tags(@root_comment.processed_html), length: 50), site: community_name) %>">
+      <meta property="og:image" content="<%= comment_social_image_url(@root_comment) %>" />
+      <meta name="twitter:image" content="<%= comment_social_image_url(@root_comment) %>">
+      <% if @root_comment.score < 0 || strip_tags(@root_comment.processed_html).length <= 400 %>
+        <% indexable = false %>
+        <meta name="robots" content="noindex">
+        <meta name="robots" content="nofollow">
+      <% end %>
+    <% else %>
+      <% if @commentable.comments_count <= 30 %>
+        <% indexable = false %>
+        <meta name="robots" content="noindex">
+        <meta name="robots" content="nofollow">
+      <% end %>
+      <link rel="canonical" href="<%= app_url("#{@commentable.path}/comments") %>" />
+      <meta property="og:url" content="<%= app_url("#{@commentable.path}/comments") %>" />
+      <meta property="og:title" content="<%= t("views.comments.meta.og.title_root", title: @commentable.title, site: community_name) %>" />
+      <meta name="twitter:title" content="<%= t("views.comments.meta.og.title_root", title: @commentable.title, site: community_name) %>">
+      <% if @commentable.class.name == "Article" && @commentable.published %>
+        <meta property="og:image" content="<%= article_social_image_url(@commentable) %>" />
+        <meta name="twitter:image" content="<%= article_social_image_url(@commentable) %>">
+      <% end %>
     <% end %>
   <% end %>
-<% end %>
+
+  <% if Settings::General.ga_publisher_id and indexable %>
+    <%= content_for :html do %>
+      <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=<%= Settings::General.ga_publisher_id %>" crossorigin="anonymous"></script>
+    <% end %>
+  <% end %>
 <% end %>
 
 <%= javascript_packs_with_chunks_tag "commentDropdowns", "followButtons", defer: true %>
