--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,3 +1,9 @@
+<% if Settings::General.ga_publisher_id %>
+  <%= content_for :html do %>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=<%= Settings::General.ga_publisher_id %>" crossorigin="anonymous"></script>
+  <% end %>
+<% end %>
+
 <%= content_for :page_meta do %>
   <% title_with_timeframe(
        page_title: "#{community_name} #{community_emoji} - #{Settings::Community.community_description}",
