--- a/app/views/comments/_comment_proper.html.erb
+++ b/app/views/comments/_comment_proper.html.erb
@@ -44,7 +44,7 @@
             <%= should_be_hidden?(comment, @root_comment) ? "element-hidden-by-commentable-user" : "" %>
           "<% if is_page_article == true && comment.root? %> itemprop="text"<% end %>>
           <%= comment.safe_processed_html %>
-          <% if comment.featured %>
+          <% if is_page_article == true && comment.featured %>
             <div class="mx-auto mt-4" id="end-featured-answer">
               <ins class="adsbygoogle"
                    style="display:block; text-align:center;"
