--- a/app/views/comments/_comment_proper.html.erb
+++ b/app/views/comments/_comment_proper.html.erb
@@ -44,13 +44,13 @@
             <%= should_be_hidden?(comment, @root_comment) ? "element-hidden-by-commentable-user" : "" %>
           "<% if is_page_article == true && comment.root? %> itemprop="text"<% end %>>
           <%= comment.safe_processed_html %>
-          <% if is_page_article == true && comment.featured %>
+          <% if Settings::General.ga_publisher_id && is_page_article == true && comment.featured %>
             <div class="mx-auto mt-4" id="end-featured-answer">
               <ins class="adsbygoogle"
                    style="display:block; text-align:center;"
                    data-ad-layout="in-article"
                    data-ad-format="fluid"
-                   data-ad-client="ca-pub-0261018540053685"
+                   data-ad-client="<%= Settings::General.ga_publisher_id %>"
                    data-ad-slot="5107891218"></ins>
               <script>
                   (adsbygoogle = window.adsbygoogle || []).push({});
