--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -13,13 +13,7 @@
   <% end %>
   <div
     id="comment-node-<%= comment.id %>"
-    class="
-      comment single-comment-node
-      <%= "low-quality-comment" if comment.decorate.low_quality %>
-      <%= comment_class(comment, is_view_root: is_view_root) %>
-      comment--deep-<%= comment.depth %>
-      <%= "comment--too-deep" if comment.depth > 3 %>
-    "
+    class="comment single-comment-node <%= "low-quality-comment" if comment.decorate.low_quality %> <%= comment_class(comment, is_view_root: is_view_root) %> comment--deep-<%= comment.depth %> <%= "comment--too-deep" if comment.depth > 3 %>"
     data-comment-id="<%= comment.id %>"
     data-path="<%= commentable&.path %>/comments/<%= comment.id_code_generated %>"
     data-comment-author-id="<%= comment_user_id_unless_deleted comment %>"
