--- a/app/views/pages/robots.text.erb
+++ b/app/views/pages/robots.text.erb
@@ -14,5 +14,6 @@ Disallow: /admin/*
 Disallow: /follows/*
 Disallow: /images/*/rs:fill*
 Disallow: /uploads/user/profile_image/*
+Disallow: /reactions?*
 
 Sitemap: <%= URL.url("sitemap-index.xml") %>
